--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:59:00 PM</p>
+    <p class="lastupdate">09/06/2020 01:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.893 inHg (-0.059)</td>
+        <td class="data">29.887 inHg (-0.064)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.8&#176;F</td>
+        <td class="data">84.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:56:26 PM">
-            109.1</span><br/>
+          <span title="01:00:32 PM">
+            109.2</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:56:26 PM (Sunday)">
-            109.1</span><br/>
+          <span title="01:00:32 PM (Sunday)">
+            109.2</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:56:26 PM" class="hival">
-            109.1</span>
+          <span title="01:00:32 PM" class="hival">
+            109.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:56:26 PM (Sunday)" class="hival">
-            109.1</span>
+          <span title="01:00:32 PM (Sunday)" class="hival">
+            109.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="12:56:02 PM">
-            29.891</span>
+          <span title="01:02:02 PM">
+            29.887</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="12:56:02 PM (Sunday)">
-            29.891</span>
+          <span title="01:02:02 PM (Sunday)">
+            29.887</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          3
+          4
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          3
+          4
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 22 hours, 12 minutes</td>
+      <td class="data">4 days, 22 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 22 hours, 12 minutes</td>
+      <td class="data">4 days, 22 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
