--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 01:19:00 PM</p>
+    <p class="lastupdate">09/06/2020 01:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.2&#176;F</td>
+        <td class="data">50.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">15%</td>
+        <td class="data">14%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.883 inHg (-0.068)</td>
+        <td class="data">29.882 inHg (-0.064)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNW (338&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.2&#176;F</td>
+        <td class="data">85.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:18:08 PM">
-            110.4</span><br/>
+          <span title="01:19:20 PM">
+            110.5</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:18:08 PM (Sunday)">
-            110.4</span><br/>
+          <span title="01:19:20 PM (Sunday)">
+            110.5</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:18:08 PM" class="hival">
-            110.4</span>
+          <span title="01:19:20 PM" class="hival">
+            110.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:18:08 PM (Sunday)" class="hival">
-            110.4</span>
+          <span title="01:19:20 PM (Sunday)" class="hival">
+            110.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="12:56:44 PM">
-            15</span>
+          <span title="01:19:48 PM">
+            14</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="12:56:44 PM (Sunday)">
-            15</span>
+          <span title="01:19:48 PM (Sunday)">
+            14</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="01:10:02 PM">
-            29.881</span>
+          <span title="01:21:02 PM">
+            29.879</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="01:10:02 PM (Sunday)">
-            29.881</span>
+          <span title="01:21:02 PM (Sunday)">
+            29.879</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            85.2</span><br/>
+          <span title="01:22:02 PM">
+            85.3</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:01 AM (Sunday)">
-            85.2</span><br/>
+          <span title="01:22:02 PM (Sunday)">
+            85.3</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 22 hours, 32 minutes</td>
+      <td class="data">4 days, 22 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 22 hours, 32 minutes</td>
+      <td class="data">4 days, 22 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
