--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 01:49:00 PM</p>
+    <p class="lastupdate">09/06/2020 01:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">110.5&#176;F</td>
+        <td class="data">111.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">110.5&#176;F</td>
+        <td class="data">111.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">110.5&#176;F</td>
+        <td class="data">111.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.2&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.865 inHg (-0.067)</td>
+        <td class="data">29.862 inHg (-0.071)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">2 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.7&#176;F</td>
+        <td class="data">85.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:48:44 PM">
-            110.6</span><br/>
+          <span title="01:53:10 PM">
+            111.2</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:48:44 PM (Sunday)">
-            110.6</span><br/>
+          <span title="01:53:10 PM (Sunday)">
+            111.2</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 03:12:38 PM">
-            110.7</span><br/>
+          <span title="09/06/2020 01:53:10 PM">
+            111.2</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:48:44 PM" class="hival">
-            110.6</span>
+          <span title="01:53:10 PM" class="hival">
+            111.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:48:44 PM (Sunday)" class="hival">
-            110.6</span>
+          <span title="01:53:10 PM (Sunday)" class="hival">
+            111.2</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 03:12:38 PM" class="hival">
-            110.7</span>
+          <span title="09/06/2020 01:53:10 PM" class="hival">
+            111.2</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="01:46:02 PM">
-            29.863</span>
+          <span title="01:51:02 PM">
+            29.862</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="01:46:02 PM (Sunday)">
-            29.863</span>
+          <span title="01:51:02 PM (Sunday)">
+            29.862</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          7
+          8
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          7
+          8
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:43:02 PM">
-            85.7</span><br/>
+          <span title="01:49:02 PM">
+            85.8</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:43:02 PM (Sunday)">
-            85.7</span><br/>
+          <span title="01:49:02 PM (Sunday)">
+            85.8</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 23 hours, 2 minutes</td>
+      <td class="data">4 days, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 23 hours, 2 minutes</td>
+      <td class="data">4 days, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
