--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 01:59:00 PM</p>
+    <p class="lastupdate">09/06/2020 02:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">112.0&#176;F</td>
+        <td class="data">112.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">112.0&#176;F</td>
+        <td class="data">112.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">112.0&#176;F</td>
+        <td class="data">112.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.5&#176;F</td>
+        <td class="data">49.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">14%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.861 inHg (-0.070)</td>
+        <td class="data">29.857 inHg (-0.073)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ESE (112&#176;)</td>
+        <td class="data">2 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.9&#176;F</td>
+        <td class="data">86.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:58:48 PM">
-            112.0</span><br/>
+          <span title="02:02:34 PM">
+            112.5</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:58:48 PM (Sunday)">
-            112.0</span><br/>
+          <span title="02:02:34 PM (Sunday)">
+            112.5</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 01:58:48 PM">
-            112.0</span><br/>
+          <span title="09/06/2020 02:02:34 PM">
+            112.5</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:58:48 PM" class="hival">
-            112.0</span>
+          <span title="02:02:34 PM" class="hival">
+            112.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:58:48 PM (Sunday)" class="hival">
-            112.0</span>
+          <span title="02:02:34 PM (Sunday)" class="hival">
+            112.5</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 01:58:48 PM" class="hival">
-            112.0</span>
+          <span title="09/06/2020 02:02:34 PM" class="hival">
+            112.5</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="01:19:48 PM">
-            14</span>
+          <span title="01:59:58 PM">
+            13</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="01:19:48 PM (Sunday)">
-            14</span>
+          <span title="01:59:58 PM (Sunday)">
+            13</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:54:02 PM">
-            85.9</span><br/>
+          <span title="01:59:02 PM">
+            86.0</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:54:02 PM (Sunday)">
-            85.9</span><br/>
+          <span title="01:59:02 PM (Sunday)">
+            86.0</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 23 hours, 12 minutes</td>
+      <td class="data">4 days, 23 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 23 hours, 12 minutes</td>
+      <td class="data">4 days, 23 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
